[web] fixed image overflow

--- a/ITA6003_WEB/DA/TH_DA/album/album.css
+++ b/ITA6003_WEB/DA/TH_DA/album/album.css
@@ -89,6 +89,8 @@ nav ul {
   padding: 20px;
   border-radius: 15px;
   box-shadow: inset 0px 12px 12px -6px rgba(0, 0, 0, 0.3);
+  display: flex;
+  flex-direction: column;
 }
 
 .right {
